@@ -21,6 +21,22 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|core
+operator|.
+name|retrieve
+operator|.
+name|RetrieveOptions
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|util
 operator|.
 name|CacheCleaner
@@ -118,6 +134,42 @@ operator|.
 name|io
 operator|.
 name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Paths
 import|;
 end_import
 
@@ -839,6 +891,159 @@ name|contains
 argument_list|(
 literal|"source"
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**      * Tests that the {@code overwriteMode} passed for the retrieve command works as expected      *      * @throws Exception      */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testRetrieveOverwriteMode
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"-settings"
+block|,
+literal|"test/repositories/ivysettings.xml"
+block|,
+literal|"-retrieve"
+block|,
+literal|"build/test/main/retrieve/overwrite-test/[artifact].[ext]"
+block|,
+literal|"-overwriteMode"
+block|,
+literal|"different"
+block|,
+literal|"-ivy"
+block|,
+literal|"test/repositories/1/org/mod1/ivys/ivy-5.0.xml"
+block|}
+decl_stmt|;
+specifier|final
+name|CommandLine
+name|parsedCommand
+init|=
+name|Main
+operator|.
+name|getParser
+argument_list|()
+operator|.
+name|parse
+argument_list|(
+name|args
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|parsedOverwriteMode
+init|=
+name|parsedCommand
+operator|.
+name|getOptionValue
+argument_list|(
+literal|"overwriteMode"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected overwriteMode parsed"
+argument_list|,
+name|RetrieveOptions
+operator|.
+name|OVERWRITEMODE_DIFFERENT
+argument_list|,
+name|parsedOverwriteMode
+argument_list|)
+expr_stmt|;
+comment|// create a dummy file which we expect the retrieve task to overwrite
+specifier|final
+name|Path
+name|retrieveArtifactPath
+init|=
+name|Paths
+operator|.
+name|get
+argument_list|(
+literal|"build/test/main/retrieve/overwrite-test/foo-bar.jar"
+argument_list|)
+decl_stmt|;
+name|Files
+operator|.
+name|createDirectories
+argument_list|(
+name|retrieveArtifactPath
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Files
+operator|.
+name|write
+argument_list|(
+name|retrieveArtifactPath
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Unexpected content at "
+operator|+
+name|retrieveArtifactPath
+argument_list|,
+literal|0
+argument_list|,
+name|Files
+operator|.
+name|readAllBytes
+argument_list|(
+name|retrieveArtifactPath
+argument_list|)
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// issue the retrieve (which retrieves the org:foo-bar:2.3.4 artifact)
+name|run
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+comment|// expect the existing jar to be overwritten
+name|assertTrue
+argument_list|(
+literal|"Content at "
+operator|+
+name|retrieveArtifactPath
+operator|+
+literal|" was not overwritten by retrieve task"
+argument_list|,
+name|Files
+operator|.
+name|readAllBytes
+argument_list|(
+name|retrieveArtifactPath
+argument_list|)
+operator|.
+name|length
+operator|>
+literal|0
 argument_list|)
 expr_stmt|;
 block|}
